Trying to insert a line to DB (Table Users_tests)

--- a/WPFCTSTuterModule/App.config
+++ b/WPFCTSTuterModule/App.config
@@ -13,17 +13,13 @@
         <client>
             <endpoint address="net.tcp://127.0.0.1:11001/servicects/ep1"
                 binding="netTcpBinding" bindingConfiguration="ep1" contract="ServiceCTS.IServiceCTS"
-                name="ep1">
-                <!--<identity>
-                    <userPrincipalName value="student@step.lan" />
-                </identity>-->
-            </endpoint>
+                name="ep1" />
             <endpoint address="net.tcp://127.0.0.1:11001/servicects/ep1"
                 binding="netTcpBinding" bindingConfiguration="ep11" contract="ServiceReference1.IServiceCTS"
                 name="ep11">
-                <!--<identity>
-                    <userPrincipalName value="student@step.lan" />
-                </identity>-->
+                <identity>
+                    <userPrincipalName value="samsung\denis" />
+                </identity>
             </endpoint>
         </client>
     </system.serviceModel>
