--- a/CTS1/WpfCTSAdminModule/App.config
+++ b/CTS1/WpfCTSAdminModule/App.config
@@ -3,4 +3,20 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <netTcpBinding>
+                <binding name="ep1" />
+            </netTcpBinding>
+        </bindings>
+        <client>
+            <endpoint address="net.tcp://127.0.0.1:11001/servicects/ep1"
+                binding="netTcpBinding" bindingConfiguration="ep1" contract="ServiceReferenceCTS.IServiceCTS"
+                name="ep1">
+                <identity>
+                    <userPrincipalName value="Tanya-PC\Таня" />
+                </identity>
+            </endpoint>
+        </client>
+    </system.serviceModel>
 </configuration>
