Реализация добавления пользователя из модуля Tutor

--- a/WPFCTSTuterModule/App.config
+++ b/WPFCTSTuterModule/App.config
@@ -13,6 +13,9 @@
             <endpoint address="net.tcp://127.0.0.1:11001/servicects/ep1"
                 binding="netTcpBinding" bindingConfiguration="ep1" contract="ServiceReference1.IServiceCTS"
                 name="ep1">
+                <identity>
+                    <userPrincipalName value="samsung\denis" />
+                </identity>
             </endpoint>
         </client>
     </system.serviceModel>
