--- a/WpfCTSUserModule/App.config
+++ b/WpfCTSUserModule/App.config
@@ -7,12 +7,19 @@
         <bindings>
             <netTcpBinding>
                 <binding name="ep1" />
+                <binding name="ep11" />
             </netTcpBinding>
         </bindings>
         <client>
             <endpoint address="net.tcp://127.0.0.1:11001/servicects/ep1"
                 binding="netTcpBinding" bindingConfiguration="ep1" contract="ServiceCTS.IServiceCTS"
-                name="ep1">
+                name="ep1" />
+            <endpoint address="net.tcp://127.0.0.1:11001/servicects/ep1"
+                binding="netTcpBinding" bindingConfiguration="ep11" contract="ServiceReference1.IServiceCTS"
+                name="ep11">
+                <identity>
+                    <userPrincipalName value="alek-home\alek" />
+                </identity>
             </endpoint>
         </client>
     </system.serviceModel>
